NMS-20158: Handle review comments